--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Me</title>
+  <title>Lefth-nd</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon"/>
   <style>
     body {
       background-color: #000;
