--- a/index.html
+++ b/index.html
@@ -36,9 +36,17 @@
 	  width: 100%;
     }
 
+	.command:focus {
+		outline: none;
+	}
+
     .output {
       color: #0F0;
     }
+	a {
+		text-decoration: none;
+		color: #0F0;
+	}
   </style>
 </head>
 <body>
@@ -52,6 +60,7 @@
       <div class="command" contenteditable="true"></div>
     </div>
   </div>
+  <div style="position: absolute; bottom: 12px"><a href="docs/blog">/blog</a></div>
 
   <script>
     const terminal = document.querySelector('.terminal');
