--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
     </div>
   </div>
   <div style="position: absolute; bottom: 12px"><a href="docs/blog">/blog</a></div>
+  <div style="position: absolute; bottom: 12px; left: 72px"><a href="docs/mybook.html">/book</a></div>
+  <div style="position: absolute; bottom: 12px; left: 116px"><a href="https://www.github.com/lefth-nd">/github</a></div>
 
   <script>
     const terminal = document.querySelector('.terminal');
